<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    tools:context=".MapsActivity" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_list"
        android:textSize="20dp"
        android:paddingLeft="125dp"/>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            android:layout_marginRight="10dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txvLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

    </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lon"
            android:layout_marginRight="10dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/txvLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_created"
                android:layout_marginRight="10dp"
                android:textSize="18dp"/>

            <TextView
                android:id="@+id/txvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"/>

        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginRight="10dp"
            android:textSize="18dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtTitle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:textSize="18dp"/>

    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:layout_marginRight="10dp"
                android:textSize="18dp"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtDescription"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text"
                android:textSize="18dp"/>

        </LinearLayout>
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <Spinner
        android:id="@+id/spPlaceType"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:entries="@array/placeType" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:background="@color/colorAccent"
                android:layout_marginRight="20dp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/btnList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:background="@color/colorAccent"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
